# prototype

./: .gitignore  2D_RPG.cpp  CMakeLists.txt  makefile  raw.txt
include/: game.h  renderer_map.h  shader.h  sprite_loader.h  stb_image.h  text_renderer.h  texture_2D.h  texture_manager.h  utils.h
include/glad/: glad.h
include/renderer/: map.h  renderer.h  text.h
include/shader/: shader.h
include/sprite/: sprite_loader.h
include/texture/: texture_2D.h  texture_manager.h
lib/: CMakeLists.txt
resources/shaders/fragment/: map.fs  renderer_map.fs  test0  text.fs  text_renderer.fs
resources/shaders/fragment/test/: test0.fs  test1.fs
resources/shaders/vertex/: map.vs  renderer.vs  test0.vs  text.vs  text_renderer.vs
resources/shaders/vertex/test/: test1.vs
resources/test/: dummy.txt
src/: 2D_RPG.cpp  game.cpp  glad.c  main.cpp  makefile  shader.cpp  sprite_loader.cpp  stb_image.cpp  texture_2D.cpp  utils.cpp
src/graphics/glad/: glad.c
src/graphics/shader/: shader.cpp
src/graphics/system/renderer/2D_Map/: renderer_map.cpp
src/graphics/system/renderer/text/: text_renderer.cpp
src/graphics/system/sprite/: sprite_loader.cpp
src/graphics/texture/: texture_2D.cpp  texture_manager.cpp
src/headers/: sprite_loader.h  utils.h
src/renderer/: map.cpp  renderer.cpp  text.cpp
src/shader/: shader.cpp
src/texture/: texture_2D.cpp  texture_manager.cpp
